Fix: User cards on login screen were not centered

--- a/Theme/ElegantFin-theme-nightly.css
+++ b/Theme/ElegantFin-theme-nightly.css
@@ -79,7 +79,7 @@ border-radius: 1.25em !important;
     justify-content: flex-start !important;
 } */
 
-.vertical-wrap {
+.vertical-wrap:not(.centered) {
     justify-content: flex-start !important;
 }
 
